# brewspec

./: .gitignore  CLAUDE.md  NOTICE  README.md  brewspec-v0.1.md  brewspec-v0.2.md  brewspec-v0.4.md  brewspec-v0.5.md  brewspec-v0.6.md  brewspec-v0.7.md  brewspec-v0.8.md  brewspec-v0.9.md  brewspec-v1.0.md  brewspec.schema.json  manifest.yaml  requirements.txt  roadmap.md
.claude/: keybindings.json  review-scorecard.yaml  settings.json
brewlog/: .gitignore  pyproject.toml
brewlog/src/brewlog/: __init__.py  brewspec.schema.json  cli.py  db.py  models.py  prompts.py  schema.py  serialise.py
brewlog/src/brewlog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
brewlog/src/brewlog/commands/: add.py  delete.py  export.py  import_.py  list_.py  search.py  show.py  stats.py  update.py
brewlog/tests/: conftest.py  test_brewspec_schema.py  test_cmd_add.py  test_cmd_delete.py  test_cmd_export.py  test_cmd_import.py  test_cmd_list.py  test_cmd_list_filter.py  test_cmd_search.py  test_cmd_show.py  test_cmd_stats.py  test_cmd_update.py  test_cmd_v04.py  test_cmd_v05.py  test_cmd_welcome.py  test_db.py  test_models.py  test_roundtrip.py  test_serialise.py  test_v07.py  test_v08.py  test_v09.py  test_v10_cmd_add.py  test_v10_cmd_show.py  test_v10_cmd_update.py  test_v10_migration.py  test_v10_models.py  test_v10_roundtrip.py  test_v10_serialise.py  test_v11_result_dose_duration.py
brewlog/tests/fixtures/: invalid_missing_field.yaml  invalid_v03_file.yaml  invalid_wrong_version.yaml  valid_brewspec.json  valid_brewspec.yaml  valid_brewspec_multi.yaml
(+222 files in other folders)
